--- a/footer.html
+++ b/footer.html
@@ -1,19 +1,37 @@
-About
-How Triphouse works
-Careers
-Privacy
-Terms
-
-Property types
-Guest houses
-Hotels
-Apartments
-Villas
-Holiday homes
-Hostels
-
-Support
-Contact Customer Service
-FAQ
-
-&copy; 2020 Triphouse, Inc. All rights reserved
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./styles/style fo footer.css"
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+</head>
+<body>
+  <div class="container">
+    <div class="list1"> 
+    <div class="list1-1 of-list">About</div>
+    <div class="list1-1">How&nbsp;Triphouse&nbsp;works</div>
+    <div class="list1-1">Careers</div>
+    <div class="list1-1">Privacy</div>
+    <div class="list1-1">Terms</div>
+    </div> 
+    <div class="list2">  
+    <div class="list2-2 of-list">Property&nbsp;types</div>
+    <div class="list2-2">Guest&nbsp;houses</div>
+    <div class="list2-2">Hotels</div>
+    <div class="list2-2">Apartments</div>
+    <div class="list2-2">Villas</div>
+    <div class="list2-2">Holiday&nbsp;homes</div>
+    <div class="list2-2">Hostels</div>
+    </div>
+    <div class="list3"> 
+    <div class="list3-3 of-list">Support</div>  
+    <div class="list3-3">Contact&nbsp;Customer&nbsp;Service</div>
+    <div class="list3-3">FAQ</div>
+  </div>
+  </div>    
+  <div class="copyrite">&copy; 2020 Triphouse, Inc. All rights reserved</div>
+</body>
+</html>
