add foter and fonts

--- a/index.html
+++ b/index.html
@@ -39,5 +39,39 @@
        </div>
     </div> 
 </div>
+<div class="foter">
+  <div class="container-foter"> 
+    <div class="container-list">
+    <div class="list-1">
+     <ul>
+      <li class="list-1-1">About</li>
+      <li>How Triphouse works</li>
+      <li>Careers</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+     </ul>
+    </div>
+    <div class="list-2">
+     <ul>   
+      <li class="list-1-1">Property types</li>
+      <li>Guest houses</li>
+      <li>Hotels</li>
+      <li>Apartments</li>
+      <li>Villas</li>
+      <li>Holiday homes</li>
+      <li>Hostels</li>
+     </ul> 
+    </div> 
+     <div class="list-3">
+       <ul> 
+        <li class="list-1-1">Support</li>
+        <li>Contact Customer Service</li>
+        <li>FAQ</li>
+       </ul>
+     </div>
+    </div>
+     <span class="copyright">© 2020 Triphouse, Inc. All rights reserved</span>
+  </div>
+ </div> 
 </body>
 </html>
